fixed some styling issues with map on the homepage clipping with navbar.
map-container height was set to 500px and that was messing with how the navbar was sticking to the bottom of the page.

--- a/flavorflow/src/styles/FilterPage.css
+++ b/flavorflow/src/styles/FilterPage.css
@@ -66,7 +66,6 @@ display: none;
 }
 
 
-
 .buttonsOff{
 border: 1px solid #7fcecb; 
 background-color: white; 
@@ -232,6 +231,9 @@ display: flex;
 justify-content: flex-end;
 }
 
-
-
-
+.filter-map-container{
+  margin: 40px auto;
+  width: 100%;
+  max-height: 800px;
+  margin-bottom: 2%; /* Add space for footer */
+}
